meecast (0.5.9) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Fixed problem with day forecast in first start for hko.gov.hk

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 30 May 2011 21:42:23 +0200

meecast (0.5.8) unstable; urgency=low

  * Added United States(Kentucky, Lousiana,Maine,Maryland,Massachusetts,
    Michigan, Minnesota, Mississippi, Missouri, Montana, Nebraska, Nevada, New Hampshire,
    New Jersey, New Mexico,New York, North Carolina, North Dakota) to foreca.com database 	
  * Added Slovenia to foreca.com database
  * Added icons for hko.gov.hk
  * Fixed problem with hko.gov.hk
  * Updated Chile for yr.no and foreca.com sources
  * Added icons for foreca.com 
  * Updated Russian translations
  * Removed region Australia in bom.gov.au source
  * Fixed problem with Finish localization for date 
  * Added current weather in second window
 
 -- Vlad Vasiliev <vlad@gas.by>  Wed, 30 May 2011 21:42:23 +0200

meecast (0.5.7) unstable; urgency=low

  * Added hours weather forecast for foreca.com source  
  * Fixed problem with temperature and icons in hours weather forecast in gismeteo.ru source
  * Fixed problem with showing hours instead of day week name in main window
  * Fixed problem with current temperature
  * Added new source of weather forecast hko.gov.hk
  * Added animation for string with weather forecast description
  * Added United States(Alabama, Alaska,Arizona, Arkansas, Colorado, Connecticut, Delaware,Florida,Georgia,
    Hawaii,Idaho,Illinois,Indiana,Iowa,Kansas) to foreca.com database
  * Changed the name of city's-Hertogenbosch on Den Bosch (Netherlands) in foreca.com
  * Added Europe (Portugal, Spain) to foreca.com database
  * Added Hong Kong to yr.no
  * Added descriptions of icons for foreca.com data
  * Added more stations to bom.gov.au source
  * Added Albanian translation. Thanks  Ilir Gjika aka illo1977
  * Updated Bulgarian translation. Thanks Zlatko Enikov
  * Updated Dutch translation. Thanks Michiel Pater aka curryfun